test/org/midica/testfiles/failing/eff-func-param-periods-nan-2.midica
INCLUDE inc/instruments.midica


0: vol.sin(0,100%,999999999999999999999999999999999999999.0)
